# groot_eclipse_preferences

./: .cproject  .project  CHANGELOG.md  CMakeLists.txt  README.md  neon.epf
neon/: cpp-code-templates.xml  cpp-editor-templates.xml  dictionary.txt  global_preferences.epf
oxygen/: cpp-editor-templates.xml  eclipse-preferences.epf
