##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(groot-eclipse-preferences)

##############################################################################
# Installs
##############################################################################

install(FILES
            neon.epf
        DESTINATION
            ${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}
        )
